Improve responsiveness and fix sidebar on small screens

--- a/src/Components/Navigation/Navigation.scss
+++ b/src/Components/Navigation/Navigation.scss
@@ -1,6 +1,10 @@
+@import '../../shared/variables.scss';
+
 #main-navigation {
   a {
     border-radius: 4px;
+    display: flex;
+    align-items: center;
 
     &:hover {
       background-color: #f6f6f6;
@@ -8,10 +12,17 @@
 
     &.active {
       font-weight: bold;
+      background-color: transparentize($color: $primaryColor, $amount: 0.8);
     }
 
     &.pending {
       font-weight: bold;
+    }
+
+    @media screen and (min-width: 500px) {
+      &.active {
+        background-color: white
+      }
     }
   }
 
