--- a/src/Routes/LandingPage/LandingPage.scss
+++ b/src/Routes/LandingPage/LandingPage.scss
@@ -122,6 +122,7 @@
 }
 
 #footer {
+  margin-top: 8vh;
   padding: 5vh 0;
 
   p {
